# ProjetKokkos

./: CMakeLists.txt  Diagonale.hpp  Gauss.hpp  Gauss.tpp  GaussK.hpp  GaussWindow.hpp  GaussWindow.tpp  Jacobi.hpp  Makefile  Performance.hpp  README.txt  RESULTS_ROMEO.txt  Smoothing.hpp  Smoothing.tpp  SmoothingKokkos.hpp  SmoothingKokkos.tpp  Storage.hpp  TestGauss.cpp  TestGaussK.cpp  TestGaussWindow.cpp  TestJacobi.cpp  TestSerial.cpp  TestStorage.cpp  UnitTester.cpp  UnitTester.hpp  alloc_node  config.hpp  load_modules  main.cpp  results.txt  setup_env
serial/: Gauss.cpp  Gauss.hpp  Jacobi.cpp  Jacobi.hpp
